<resources>
    <string name="app_name">Time_Management</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="nameET">Name</string>
    <string name="time">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="drawer_item1">Goals</string>
    <string name="drawer_item2">Reports</string>
    <string name="drawer_item3">Tasks</string>
    <string name="drawer_item4">Time Segments</string>
    <string name="hello_blank_fragment">fragment</string>
    <string name="clear_lap">clear lap</string>

</resources>